--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
       </div>
     </div>
     <main
-      class="page-container max-w-[1920px] max-[1440px]:max-w-5xl mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-[360px]"
+      class="page-container max-w-[1920px] max-[1440px]:max-w-5xl mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-full"
     >
       <div class="mt-16 mb-10 px-4 max-[768px]:block hidden">
         <h2
@@ -793,7 +793,7 @@
                 />
               </div>
               <p
-                class="about_title max-[1025px]:text-[48px]! max-[1024px]:text-[2.25rem]!"
+                class="about_title max-[1025px]:text-[48px]! max-[1024px]:text-[2.25rem]! max-[768px]:text-2xl!"
               >
                 3000+
               </p>
@@ -814,7 +814,7 @@
                 />
               </div>
               <p
-                class="about_title max-[1025px]:text-[48px]! max-[1024px]:text-[2.25rem]!"
+                class="about_title max-[1025px]:text-[48px]! max-[1024px]:text-[2.25rem]! max-[768px]:text-2xl!"
               >
                 1700+
               </p>
@@ -835,7 +835,7 @@
                 />
               </div>
               <p
-                class="about_title max-[1025px]:text-[48px]! max-[1024px]:text-[2.25rem]!"
+                class="about_title max-[1025px]:text-[48px]! max-[1024px]:text-[2.25rem]! max-[768px]:text-2xl!"
               >
                 15 млн ₽
               </p>
@@ -854,7 +854,7 @@
                 />
               </div>
               <p
-                class="about_title max-[1025px]:text-[48px]! max-[1024px]:text-[2.25rem]!"
+                class="about_title max-[1025px]:text-[48px]! max-[1024px]:text-[2.25rem]! max-[768px]:text-2xl!"
               >
                 17+ лет
               </p>
@@ -864,7 +864,7 @@
         </div>
 
         <div
-          class="relative flex-1 pt-[94px] max-[1440px]:pt-20 max-[768px]:pt-3"
+          class="relative flex-1 max-[1024px]:max-w-[324px] max-[768px]:max-w-full pt-[94px] max-[1440px]:pt-20 max-[768px]:pt-3"
         >
           <p class="font-medium text-2xl mb-6 space3 max-[1440px]:hidden">
             Логистика для бизнеса
@@ -893,7 +893,7 @@
           <img
             src="./assets/images/about_company.png"
             alt="about"
-            class="h-185 object-cover w-full max-[1920px]:h-160 max-[1441px]:w-125.5 max-[1441px]:h-110 max-[1025px]:mt-11 max-[768px]:w-82 max-[768px]:h-82 max-[768px]:rounded-3xl! max-[768px]:mt-0 max-[1440px]:mt-11 rounded-l-4xl max-[1024px]:mt-17 max-[1024px]:rounded-l-3xl max-[1024px]:h-102.5 max-[1024px]:w-81"
+            class="h-185 object-cover w-full max-[1920px]:h-160 max-[1441px]:w-125.5 max-[1441px]:h-110 max-[1025px]:mt-11 max-[768px]:w-full max-[768px]:h-82 max-[768px]:rounded-3xl! max-[768px]:mt-0 max-[1440px]:mt-11 rounded-l-4xl max-[1024px]:mt-13 max-[1024px]:rounded-l-3xl max-[1024px]:h-102.5 max-[1024px]:full"
           />
         </div>
       </section>
@@ -1916,7 +1916,7 @@
         </div>
         <div class="flex gap-6 max-[1440px]:overflow-auto">
           <a
-            href="/pages/blog.html"
+            href="/pages/pages/blog.html"
             class="news-card max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
           >
             <img src="./assets/images/news1.png" class="news-card-image mb-4" />
@@ -1948,7 +1948,7 @@
           </a>
 
           <a
-            href="/pages/blog.html"
+            href="/pages/pages/blog.html"
             class="news-card max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
           >
             <img src="./assets/images/news3.png" class="news-card-image mb-4" />
@@ -1965,7 +1965,7 @@
           </a>
 
           <a
-            href="/pages/blog.html"
+            href="/pages/pages/blog.html"
             class="news-card max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
           >
             <img src="./assets/images/news4.png" class="news-card-image mb-4" />
@@ -2152,7 +2152,7 @@
             </li>
             <li class="text-white space3 font-medium mb-3">
               <a
-                href="/pages/blog.html"
+                href="/pages/pages/blog.html"
                 class="text-white hover:text-[#C83A36] transition-colors"
                 >Статьи</a
               >
