--- a/pages/cargo_transportation.html
+++ b/pages/cargo_transportation.html
@@ -595,7 +595,7 @@
       </div>
     </div>
     <main
-      class="max-[1440px]:max-w-5xl mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-[360px]"
+      class="max-[1440px]:max-w-5xl mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-full"
     >
       <div class="mt-16 mb-10 px-4 max-[768px]:block hidden">
         <h2
@@ -759,7 +759,7 @@
         <div
           class="bg-[#E8EBED] mb-3 py-12 pl-14 pr-46.25 flex items-center justify-between rounded-[56px] max-[1440px]:mb-2 max-[1440px]:rounded-3xl max-[1440px]:py-8 max-[1440px]:px-12 max-[1024px]:rounded-2xl max-[1024px]:py-8 max-[1024px]:px-6 max-[768px]:mb-3 max-[768px]:p-4"
         >
-          <div>
+          <div class="max-[768px]:flex flex-col w-full items-center">
             <p
               id="big-title"
               class="text-[2rem] space3 font-medium mb-21 text-[#3A3A3A] max-[1440px]:mb-15 max-[1024px]:text-2xl max-[768px]:mb-6"
@@ -986,7 +986,7 @@
                   />
                 </div>
                 <p
-                  class="about_title max-[1025px]:text-[48px]! max-[1024px]:text-[2.25rem]!"
+                  class="about_title max-[1025px]:text-[48px]! max-[1024px]:text-[2.25rem]! max-[768px]:text-2xl!"
                 >
                   3000+
                 </p>
@@ -1007,7 +1007,7 @@
                   />
                 </div>
                 <p
-                  class="about_title max-[1025px]:text-[48px]! max-[1024px]:text-[2.25rem]!"
+                  class="about_title max-[1025px]:text-[48px]! max-[1024px]:text-[2.25rem]! max-[768px]:text-2xl!"
                 >
                   1700+
                 </p>
@@ -1028,7 +1028,7 @@
                   />
                 </div>
                 <p
-                  class="about_title max-[1025px]:text-[48px]! max-[1024px]:text-[2.25rem]!"
+                  class="about_title max-[1025px]:text-[48px]! max-[1024px]:text-[2.25rem]! max-[768px]:text-2xl!"
                 >
                   15 млн ₽
                 </p>
@@ -1047,7 +1047,7 @@
                   />
                 </div>
                 <p
-                  class="about_title max-[1025px]:text-[48px]! max-[1024px]:text-[2.25rem]!"
+                  class="about_title max-[1025px]:text-[48px]! max-[1024px]:text-[2.25rem]! max-[768px]:text-2xl!"
                 >
                   17+ лет
                 </p>
@@ -1057,7 +1057,9 @@
           </div>
         </div>
 
-        <div class="relative flex-1">
+        <div
+          class="relative flex-1 max-[1024px]:max-w-[324px] max-[768px]:max-w-full"
+        >
           <p class="font-medium text-2xl mb-6 space3 max-[1440px]:hidden">
             Логистика для бизнеса
             <span class="text-[#C83A36] leading-8"
@@ -1085,7 +1087,7 @@
           <img
             src="../assets/images/about_company.png"
             alt="about"
-            class="h-185 object-cover w-full max-[1920px]:h-160 max-[1441px]:w-125.5 max-[1441px]:h-110 max-[1025px]:mt-11 max-[768px]:w-82 max-[768px]:h-82 max-[768px]:rounded-3xl! max-[768px]:mt-0 max-[1440px]:mt-11 rounded-l-4xl max-[1024px]:mt-17 max-[1024px]:rounded-l-3xl max-[1024px]:h-102.5 max-[1024px]:w-81"
+            class="h-185 object-cover w-full max-[1920px]:h-160 max-[1441px]:w-125.5 max-[1441px]:h-110 max-[1025px]:mt-11 max-[768px]:w-full max-[768px]:h-82 max-[768px]:rounded-3xl! max-[768px]:mt-0 max-[1440px]:mt-11 rounded-l-4xl max-[1024px]:mt-14 max-[1024px]:rounded-l-3xl max-[1024px]:h-102.5 max-[1024px]:w-81"
           />
         </div>
       </section>
@@ -1787,7 +1789,7 @@
         </div>
         <div class="flex gap-6 max-[1440px]:overflow-auto">
           <a
-            href="/blog.html"
+            href="/pages/pages/blog.html"
             class="max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
           >
             <img src="../assets/images/news1.png" class="mb-4" />
@@ -1803,7 +1805,7 @@
             <p class="text-[#3A3A3A99] space3">28 июня 2025</p>
           </a>
           <a
-            href="/blog.html"
+            href="/pages/pages/blog.html"
             class="max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
           >
             <img
@@ -1823,7 +1825,7 @@
             <p class="text-[#3A3A3A99] space3">19 июня 2025</p>
           </a>
           <a
-            href="/blog.html"
+            href="/pages/pages/blog.html"
             class="max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
           >
             <img
@@ -1843,7 +1845,7 @@
             <p class="text-[#3A3A3A99] space3">5 июня 2025</p>
           </a>
           <a
-            href="/blog.html"
+            href="/pages/pages/pages/blog.html"
             class="max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
           >
             <img
