--- a/pages/pricelist.html
+++ b/pages/pricelist.html
@@ -299,7 +299,7 @@
       />
     </div>
     <main
-      class="max-[1440px]:max-w-5xl mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-[360px]"
+      class="max-[1440px]:max-w-5xl mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-full"
     >
       <section
         class="mb-40 max-[1440px]:mb-20 max-[1024px]:mb-16 px-15 max-[1440px]:px-10 max-[1024px]:px-5"
