--- a/pages/blog.html
+++ b/pages/blog.html
@@ -271,7 +271,7 @@
       </div>
     </header>
     <main
-      class="max-w-[1920px] max-[1440px]:max-w-5xl mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-[360px] px-15 py-30 max-[1440px]:px-5 max-[1440px]:py-25 max-[768px]:px-4 max-[768px]:py-10"
+      class="max-w-[1920px] max-[1440px]:max-w-5xl mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-full px-15 py-30 max-[1440px]:px-5 max-[1440px]:py-25 max-[768px]:px-4 max-[768px]:py-10"
     >
       <div class="flex gap-47 relative">
         <div class="max-[1440px]:hidden">
@@ -338,7 +338,7 @@
           <img
             src="../assets/images/blogMobile.png"
             alt="blog"
-            class="hidden max-[768px]:block mb-8"
+            class="hidden max-[768px]:block mb-8 w-full"
           />
           <p
             class="mb-15 text-[#3A3A3A] space3 text-2xl leading-8 max-[1440px]:mb-12 max-[768px]:mb-8"
@@ -456,7 +456,7 @@
           <img
             src="../assets/images/blogMobile.png"
             alt="blog"
-            class="hidden max-[768px]:block mb-8"
+            class="hidden max-[768px]:block mb-8 w-full"
           />
           <h2
             id="section3"
