--- a/pages/news.html
+++ b/pages/news.html
@@ -291,7 +291,7 @@
       />
     </div>
     <main
-      class="max-[1440px]:max-w-5xl mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-[360px] px-15 max-[1440px]:px-10 max-[1024px]:px-5"
+      class="max-[1440px]:max-w-5xl mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-full px-15 max-[1440px]:px-10 max-[1024px]:px-5"
     >
       <h2 class="title mb-8">Новости</h2>
       <div class="flex gap-4 mb-12 overflow-auto max-[768px]:mb-10">
@@ -315,7 +315,7 @@
         class="grid grid-cols-4 gap-x-6 gap-y-12 mb-30 max-[1440px]:grid-cols-3 max-[1024px]:grid-cols-2 max-[768px]:grid-cols-1"
       >
         <a
-          href="/blog.html"
+          href="/pages/blog.html"
           class="max-[1440px]:w-74.5 max-[1024px]:w-88 max-[768px]:w-full min-[1440px]:flex-1 shrink-0 max-[768px]:rounded-3xl"
         >
           <img src="../assets/images/news1.png" class="mb-4" />
@@ -329,7 +329,7 @@
           <p class="text-[#3A3A3A99] space3">28 июня 2025</p>
         </a>
         <a
-          href="/blog.html"
+          href="/pages/blog.html"
           class="max-[1440px]:w-74.5 max-[1024px]:w-88 max-[768px]:w-full min-[1440px]:flex-1 shrink-0 max-[768px]:rounded-3xl"
         >
           <img
@@ -347,7 +347,7 @@
           <p class="text-[#3A3A3A99] space3">19 июня 2025</p>
         </a>
         <a
-          href="/blog.html"
+          href="/pages/blog.html"
           class="max-[1440px]:w-74.5 max-[1024px]:w-88 min-[1440px]:flex-1 shrink-0 max-[768px]:w-full max-[768px]:rounded-3xl"
         >
           <img
@@ -365,7 +365,7 @@
           <p class="text-[#3A3A3A99] space3">5 июня 2025</p>
         </a>
         <a
-          href="/blog.html"
+          href="/pages/blog.html"
           class="max-[1440px]:74.5 max-[1024px]:w-88 min-[1440px]:flex-1 shrink-0 max-[768px]:w-full max-[768px]:rounded-3xl"
         >
           <img
@@ -383,7 +383,7 @@
           <p class="text-[#3A3A3A99] space3">1 июля 2025</p>
         </a>
         <a
-          href="/blog.html"
+          href="/pages/blog.html"
           class="max-[1440px]:w-74.5 max-[1024px]:w-88 max-[768px]:w-full min-[1440px]:flex-1 shrink-0 max-[768px]:rounded-3xl"
         >
           <img src="../assets/images/news1.png" class="mb-4" />
@@ -397,7 +397,7 @@
           <p class="text-[#3A3A3A99] space3">28 июня 2025</p>
         </a>
         <a
-          href="/blog.html"
+          href="/pages/blog.html"
           class="max-[1440px]:w-74.5 max-[1024px]:w-88 max-[768px]:w-full min-[1440px]:flex-1 shrink-0 max-[768px]:rounded-3xl"
         >
           <img
@@ -415,7 +415,7 @@
           <p class="text-[#3A3A3A99] space3">19 июня 2025</p>
         </a>
         <a
-          href="/blog.html"
+          href="/pages/blog.html"
           class="max-[1440px]:w-74.5 max-[1024px]:w-88 min-[1440px]:flex-1 shrink-0 max-[768px]:w-full max-[768px]:rounded-3xl"
         >
           <img
@@ -433,7 +433,7 @@
           <p class="text-[#3A3A3A99] space3">5 июня 2025</p>
         </a>
         <a
-          href="/blog.html"
+          href="/pages/blog.html"
           class="max-[1440px]:74.5 max-[1024px]:w-88 min-[1440px]:flex-1 shrink-0 max-[768px]:w-full max-[768px]:rounded-3xl"
         >
           <img
