--- a/pages/road_transportation.html
+++ b/pages/road_transportation.html
@@ -293,7 +293,7 @@
       />
     </div>
     <main
-      class="max-[1440px]:max-w-5xl mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-[360px]"
+      class="max-[1440px]:max-w-5xl mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-full"
     >
       <section
         class="px-15 max-[1440px]:px-10 max-[768px]:px-4 mb-40 max-[1440px]:mb-20 max-[768px]:mb-16"
@@ -304,7 +304,7 @@
         <div
           class="bg-[#E8EBED] mb-3 py-12 pl-14 pr-46.25 flex items-center justify-between rounded-[56px] max-[1440px]:mb-2 max-[1440px]:rounded-3xl max-[1440px]:py-8 max-[1440px]:px-12 max-[1024px]:rounded-2xl max-[1024px]:py-8 max-[1024px]:px-6 max-[768px]:mb-3 max-[768px]:p-4"
         >
-          <div>
+          <div class="max-[768px]:flex flex-col w-full items-center">
             <p
               id="big-title"
               class="text-[2rem] space3 font-medium mb-21 text-[#3A3A3A] max-[1440px]:mb-15 max-[1024px]:text-2xl max-[768px]:mb-6"
@@ -511,7 +511,7 @@
           </div>
           <div class="flex-1">
             <p
-              class="text-[#3A3A3A] mb-8 space3 text-xl max-w-140 max-[1440px]:text-sm max-[1440px]:max-w-79 max-[1024px]:w-full max-[1024px]:mb-6"
+              class="text-[#3A3A3A] mb-8 space3 text-xl max-w-140 max-[1440px]:text-sm max-[1440px]:max-w-79 max-[1024px]:max-w-full max-[1024px]:mb-6"
             >
               Перевозки грузов до 10 тонн — оптимальный выбор для доставки
               крупной партии товара на средние и дальние расстояния.
@@ -1341,7 +1341,7 @@
         </div>
         <div class="flex gap-6 max-[1440px]:overflow-auto">
           <a
-            href="/blog.html"
+            href="/pages/blog.html"
             class="max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
           >
             <img src="../assets/images/news1.png" class="mb-4" />
@@ -1357,7 +1357,7 @@
             <p class="text-[#3A3A3A99] space3">28 июня 2025</p>
           </a>
           <a
-            href="/blog.html"
+            href="/pages/blog.html"
             class="max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
           >
             <img
@@ -1377,7 +1377,7 @@
             <p class="text-[#3A3A3A99] space3">19 июня 2025</p>
           </a>
           <a
-            href="/blog.html"
+            href="/pages/blog.html"
             class="max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
           >
             <img
@@ -1397,7 +1397,7 @@
             <p class="text-[#3A3A3A99] space3">5 июня 2025</p>
           </a>
           <a
-            href="/blog.html"
+            href="/pages/blog.html"
             class="max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
           >
             <img
