--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
           </div>
           <div id="cars" class="flex mb-4 gap-2 overflow-auto">
             <div
-              class="p-2 truck-card active rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
+              class="p-2 truck-card active rounded-xl flex-1 max-[1440px]:min-w-30! bg-[#F2F5F7] flex flex-col items-center shrink-0"
             >
               <img
                 src="./assets/icons/formCar.svg"
@@ -462,7 +462,7 @@
               </p>
             </div>
             <div
-              class="p-2 truck-card rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
+              class="p-2 truck-card rounded-xl flex-1 max-[1440px]:min-w-30! bg-[#F2F5F7] flex flex-col items-center shrink-0"
             >
               <img
                 src="./assets/icons/formCar2.svg"
@@ -476,7 +476,7 @@
               </p>
             </div>
             <div
-              class="p-2 truck-card rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
+              class="p-2 truck-card rounded-xl flex-1 max-[1440px]:min-w-30! bg-[#F2F5F7] flex flex-col items-center shrink-0"
             >
               <img
                 src="./assets/icons/formCar3.svg"
@@ -490,7 +490,7 @@
               </p>
             </div>
             <div
-              class="p-2 truck-card rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
+              class="p-2 truck-card rounded-xl flex-1 max-[1440px]:min-w-30! bg-[#F2F5F7] flex flex-col items-center shrink-0"
             >
               <img
                 src="./assets/icons/formCar4.svg"
@@ -504,7 +504,7 @@
               </p>
             </div>
             <div
-              class="p-2 truck-card rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30! bg-[#F2F5F7] flex flex-col items-center shrink-0"
+              class="p-2 truck-card rounded-xl flex-1 max-[1440px]:min-w-30! bg-[#F2F5F7] flex flex-col items-center shrink-0"
             >
               <img
                 src="./assets/icons/formCar5.svg"
@@ -639,7 +639,7 @@
         </div>
         <div id="cars-mobile" class="flex mb-2 gap-2 overflow-auto">
           <div
-            class="p-4 truck-card active rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
+            class="p-4 truck-card flex-1 active rounded-xl max-[1440px]:min-w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
           >
             <img src="./assets/icons/formCar.svg" alt="car" class="mb-1" />
             <p class="max-w-21 text-lg text-center text-[#3A3A3A] font-medium">
@@ -647,7 +647,7 @@
             </p>
           </div>
           <div
-            class="p-4 truck-card rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
+            class="p-4 truck-card rounded-xl flex-1 max-[1440px]:min-w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
           >
             <img src="./assets/icons/formCar2.svg" alt="car" class="mb-1" />
             <p class="max-w-21 text-lg text-center text-[#3A3A3A] font-medium">
@@ -655,7 +655,7 @@
             </p>
           </div>
           <div
-            class="p-4 truck-card rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
+            class="p-4 truck-card rounded-xl flex-1 max-[1440px]:min-w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
           >
             <img src="./assets/icons/formCar3.svg" alt="car" class="mb-1" />
             <p class="max-w-21 text-lg text-center text-[#3A3A3A] font-medium">
@@ -663,7 +663,7 @@
             </p>
           </div>
           <div
-            class="p-4 truck-card rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
+            class="p-4 truck-card rounded-xl flex-1 max-[1440px]:min-w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
           >
             <img src="./assets/icons/formCar4.svg" alt="car" class="mb-1" />
             <p class="max-w-21 text-lg text-center text-[#3A3A3A] font-medium">
@@ -671,7 +671,7 @@
             </p>
           </div>
           <div
-            class="p-4 truck-card rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30! bg-[#F2F5F7] flex flex-col items-center shrink-0"
+            class="p-4 truck-card rounded-xl flex-1 max-[1440px]:min-w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
           >
             <img src="./assets/icons/formCar5.svg" alt="car" class="mb-1" />
             <p class="max-w-21 text-lg text-center text-[#3A3A3A] font-medium">
@@ -1916,7 +1916,7 @@
         </div>
         <div class="flex gap-6 max-[1440px]:overflow-auto">
           <a
-            href="/pages/pages/blog.html"
+            href="/pages/blog.html"
             class="news-card max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
           >
             <img src="./assets/images/news1.png" class="news-card-image mb-4" />
@@ -1948,7 +1948,7 @@
           </a>
 
           <a
-            href="/pages/pages/blog.html"
+            href="/pages/blog.html"
             class="news-card max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
           >
             <img src="./assets/images/news3.png" class="news-card-image mb-4" />
@@ -1965,7 +1965,7 @@
           </a>
 
           <a
-            href="/pages/pages/blog.html"
+            href="/pages/blog.html"
             class="news-card max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
           >
             <img src="./assets/images/news4.png" class="news-card-image mb-4" />
@@ -2152,7 +2152,7 @@
             </li>
             <li class="text-white space3 font-medium mb-3">
               <a
-                href="/pages/pages/blog.html"
+                href="/pages/blog.html"
                 class="text-white hover:text-[#C83A36] transition-colors"
                 >Статьи</a
               >
