--- a/pages/cargo_transportation.html
+++ b/pages/cargo_transportation.html
@@ -451,7 +451,7 @@
           </div>
           <div id="cars" class="flex mb-4 gap-2 overflow-auto">
             <div
-              class="p-2 truck-card-form active rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
+              class="p-2 truck-card-form active rounded-xl flex-1 max-[1440px]:min-w-30! bg-[#F2F5F7] flex flex-col items-center shrink-0"
             >
               <img
                 src="../assets/icons/formCar.svg"
@@ -465,7 +465,7 @@
               </p>
             </div>
             <div
-              class="p-2 truck-card-form rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
+              class="p-2 truck-card-form rounded-xl flex-1 max-[1440px]:min-w-30! bg-[#F2F5F7] flex flex-col items-center shrink-0"
             >
               <img
                 src="../assets/icons/formCar2.svg"
@@ -479,7 +479,7 @@
               </p>
             </div>
             <div
-              class="p-2 truck-card-form rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
+              class="p-2 truck-card-form rounded-xl flex-1 max-[1440px]:min-w-30! bg-[#F2F5F7] flex flex-col items-center shrink-0"
             >
               <img
                 src="../assets/icons/formCar3.svg"
@@ -493,7 +493,7 @@
               </p>
             </div>
             <div
-              class="p-2 truck-card-form rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
+              class="p-2 truck-card-form rounded-xl flex-1 max-[1440px]:min-w-30! bg-[#F2F5F7] flex flex-col items-center shrink-0"
             >
               <img
                 src="../assets/icons/formCar4.svg"
@@ -507,7 +507,7 @@
               </p>
             </div>
             <div
-              class="p-2 truck-card-form rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30! bg-[#F2F5F7] flex flex-col items-center shrink-0"
+              class="p-2 truck-card-form rounded-xl flex-1 max-[1440px]:min-w-30! bg-[#F2F5F7] flex flex-col items-center shrink-0"
             >
               <img
                 src="../assets/icons/formCar5.svg"
@@ -642,7 +642,7 @@
         </div>
         <div id="cars-mobile" class="flex mb-2 gap-2 overflow-auto">
           <div
-            class="p-4 truck-card-form active rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
+            class="p-4 truck-card-form active rounded-xl flex-1 max-[1440px]:min-w-30! bg-[#F2F5F7] flex flex-col items-center shrink-0"
           >
             <img src="../assets/icons/formCar.svg" alt="car" class="mb-1" />
             <p class="max-w-21 text-lg text-center text-[#3A3A3A] font-medium">
@@ -650,7 +650,7 @@
             </p>
           </div>
           <div
-            class="p-4 truck-card-form rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
+            class="p-4 truck-card-form rounded-xl flex-1 max-[1440px]:min-w-30! bg-[#F2F5F7] flex flex-col items-center shrink-0"
           >
             <img src="../assets/icons/formCar2.svg" alt="car" class="mb-1" />
             <p class="max-w-21 text-lg text-center text-[#3A3A3A] font-medium">
@@ -658,7 +658,7 @@
             </p>
           </div>
           <div
-            class="p-4 truck-card-form rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
+            class="p-4 truck-card-form rounded-xl flex-1 max-[1440px]:min-w-30! bg-[#F2F5F7] flex flex-col items-center shrink-0"
           >
             <img src="../assets/icons/formCar3.svg" alt="car" class="mb-1" />
             <p class="max-w-21 text-lg text-center text-[#3A3A3A] font-medium">
@@ -666,7 +666,7 @@
             </p>
           </div>
           <div
-            class="p-4 truck-card-form rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30 bg-[#F2F5F7] flex flex-col items-center shrink-0"
+            class="p-4 truck-card-form rounded-xl flex-1 max-[1440px]:min-w-30! bg-[#F2F5F7] flex flex-col items-center shrink-0"
           >
             <img src="../assets/icons/formCar4.svg" alt="car" class="mb-1" />
             <p class="max-w-21 text-lg text-center text-[#3A3A3A] font-medium">
@@ -674,7 +674,7 @@
             </p>
           </div>
           <div
-            class="p-4 truck-card-form rounded-xl min-[1440px]:flex-1 max-[1440px]:w-30! bg-[#F2F5F7] flex flex-col items-center shrink-0"
+            class="p-4 truck-card-form rounded-xl flex-1 max-[1440px]:min-w-30! bg-[#F2F5F7] flex flex-col items-center shrink-0"
           >
             <img src="../assets/icons/formCar5.svg" alt="car" class="mb-1" />
             <p class="max-w-21 text-lg text-center text-[#3A3A3A] font-medium">
@@ -852,7 +852,7 @@
         </div>
         <div class="flex gap-3 overflow-auto max-[1440px]:gap-2">
           <div
-            class="bg-[#E8EBED] truck-card active radius_left py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] max-[1440px]:w-[186px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
+            class="bg-[#E8EBED] truck-card active radius_left py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] max-[1440px]:w-[182px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
             data-title="Фура “Тент” 10 тонн"
             data-img="../assets/images/tent.png"
             data-length="13.6 м"
@@ -872,7 +872,7 @@
             </p>
           </div>
           <div
-            class="bg-[#F2F5F7] truck-card radius_full py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[186px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
+            class="bg-[#F2F5F7] truck-card radius_full py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[182px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
             data-title="Фура “Реф” 10 тонн"
             data-img="../assets/images/ref.png"
             data-length="13.2 м"
@@ -892,7 +892,7 @@
             </p>
           </div>
           <div
-            class="bg-[#F2F5F7] truck-card radius_full py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[186px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
+            class="bg-[#F2F5F7] truck-card radius_full py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[182px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
             data-title=" Фура “Реф” 10 тонн"
             data-img="../assets/images/ref.png"
             data-length="15.2 м"
@@ -912,7 +912,7 @@
             </p>
           </div>
           <div
-            class="bg-[#F2F5F7] truck-card radius_full py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[186px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
+            class="bg-[#F2F5F7] truck-card radius_full py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[182px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
             data-title=" Фура “Реф” 10 тонн"
             data-img="../assets/images/ref.png"
             data-length="15.2 м"
@@ -932,7 +932,7 @@
             </p>
           </div>
           <div
-            class="bg-[#F2F5F7] truck-card radius_right py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[186px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
+            class="bg-[#F2F5F7] truck-card radius_right py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[182px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
             data-title="Фура Реф 10 тонн"
             data-img="../assets/images/bort.png"
             data-length="12.2 м"
