--- a/pages/news.html
+++ b/pages/news.html
@@ -297,159 +297,28 @@
       <div class="flex gap-4 mb-12 overflow-auto max-[768px]:mb-10">
         <button
           class="py-4 tab-btn active shrink-0 px-6 bg-[#3A3A3A] flex items-center rounded-2xl text-white text-2xl max-[1024px]:text-xl max-[1024px]:py-3 max-[1024px]:px-4"
+          data-news-tab="all"
         >
           Все
         </button>
         <button
           class="py-4 shrink-0 tab-btn px-6 bg-[#F2F5F7] flex items-center rounded-2xl text-[#3A3A3A] text-2xl max-[1024px]:text-xl max-[1024px]:py-3 max-[1024px]:px-4"
+          data-news-tab="company"
         >
           Новости компании
         </button>
         <button
           class="py-4 shrink-0 px-6 tab-btn bg-[#F2F5F7] flex items-center rounded-2xl text-[#3A3A3A] text-2xl max-[1024px]:text-xl max-[1024px]:py-3 max-[1024px]:px-4"
+          data-news-tab="delivery"
         >
           Новости по грузоперевозкам
         </button>
       </div>
       <div
+        id="news-container"
         class="grid grid-cols-4 gap-x-6 gap-y-12 mb-30 max-[1440px]:grid-cols-3 max-[1024px]:grid-cols-2 max-[768px]:grid-cols-1"
       >
-        <a
-          href="/pages/blog.html"
-          class="max-[1440px]:w-74.5 max-[1024px]:w-88 max-[768px]:w-full min-[1440px]:flex-1 shrink-0 max-[768px]:rounded-3xl"
-        >
-          <img src="../assets/images/news1.png" class="mb-4" />
-          <p class="text-[#3A3A3A] font-medium text-2xl space3 leading-8 mb-2">
-            Новый маршрут: доставка в малые города
-          </p>
-          <p class="text-[#3A3A3A] text-lg leading-6 space3 mb-6">
-            Мы открыли новое направление для доставки в малые населённые пункты.
-            Теперь ваши грузы доберутся ещё быстрее.
-          </p>
-          <p class="text-[#3A3A3A99] space3">28 июня 2025</p>
-        </a>
-        <a
-          href="/pages/blog.html"
-          class="max-[1440px]:w-74.5 max-[1024px]:w-88 max-[768px]:w-full min-[1440px]:flex-1 shrink-0 max-[768px]:rounded-3xl"
-        >
-          <img
-            src="../assets/images/news2.png"
-            class="mb-4"
-            class="mb-4 max-[1440px]:object-cover max-[1440px]:w-74.5 max-[1024px]:w-88 max-[768px]:w-full max-[1440px]:h-87.5"
-          />
-          <p class="text-[#3A3A3A] font-medium text-2xl space3 leading-8 mb-2">
-            Снижение сроков городской доставки
-          </p>
-          <p class="text-[#3A3A3A] text-lg leading-6 space3 mb-6">
-            Благодаря оптимизации логистики мы сократили среднее время доставки
-            по городу до 3 часов.
-          </p>
-          <p class="text-[#3A3A3A99] space3">19 июня 2025</p>
-        </a>
-        <a
-          href="/pages/blog.html"
-          class="max-[1440px]:w-74.5 max-[1024px]:w-88 min-[1440px]:flex-1 shrink-0 max-[768px]:w-full max-[768px]:rounded-3xl"
-        >
-          <img
-            src="../assets/images/news3.png"
-            class="mb-4"
-            class="mb-4 max-[1440px]:object-cover max-[1440px]:w-74.5 max-[1024px]:w-88 max-[768px]:w-full max-[1440px]:h-87.5"
-          />
-          <p class="text-[#3A3A3A] font-medium text-2xl space3 leading-8 mb-2">
-            Новые стандарты упаковки
-          </p>
-          <p class="text-[#3A3A3A] text-lg leading-6 space3 mb-6">
-            Ввели усиленные правила упаковки грузов для повышения сохранности
-            при перевозке.
-          </p>
-          <p class="text-[#3A3A3A99] space3">5 июня 2025</p>
-        </a>
-        <a
-          href="/pages/blog.html"
-          class="max-[1440px]:74.5 max-[1024px]:w-88 min-[1440px]:flex-1 shrink-0 max-[768px]:w-full max-[768px]:rounded-3xl"
-        >
-          <img
-            src="../assets/images/news4.png"
-            class="mb-4"
-            class="mb-4 max-[1440px]:object-cover max-[1440px]:74.5 max-[1024px]:w-88 max-[768px]:w-full max-[1440px]:h-87.5"
-          />
-          <p class="text-[#3A3A3A] font-medium text-2xl space3 leading-8 mb-2">
-            Мы теперь в Telegram
-          </p>
-          <p class="text-[#3A3A3A] text-lg leading-6 space3 mb-6">
-            Подписывайтесь на наш Telegram-канал, чтобы первыми узнавать об
-            акциях, изменениях и новостях компании.
-          </p>
-          <p class="text-[#3A3A3A99] space3">1 июля 2025</p>
-        </a>
-        <a
-          href="/pages/blog.html"
-          class="max-[1440px]:w-74.5 max-[1024px]:w-88 max-[768px]:w-full min-[1440px]:flex-1 shrink-0 max-[768px]:rounded-3xl"
-        >
-          <img src="../assets/images/news1.png" class="mb-4" />
-          <p class="text-[#3A3A3A] font-medium text-2xl space3 leading-8 mb-2">
-            Новый маршрут: доставка в малые города
-          </p>
-          <p class="text-[#3A3A3A] text-lg leading-6 space3 mb-6">
-            Мы открыли новое направление для доставки в малые населённые пункты.
-            Теперь ваши грузы доберутся ещё быстрее.
-          </p>
-          <p class="text-[#3A3A3A99] space3">28 июня 2025</p>
-        </a>
-        <a
-          href="/pages/blog.html"
-          class="max-[1440px]:w-74.5 max-[1024px]:w-88 max-[768px]:w-full min-[1440px]:flex-1 shrink-0 max-[768px]:rounded-3xl"
-        >
-          <img
-            src="../assets/images/news2.png"
-            class="mb-4"
-            class="mb-4 max-[1440px]:object-cover max-[1440px]:w-74.5 max-[1024px]:w-88 max-[768px]:w-full max-[1440px]:h-87.5"
-          />
-          <p class="text-[#3A3A3A] font-medium text-2xl space3 leading-8 mb-2">
-            Снижение сроков городской доставки
-          </p>
-          <p class="text-[#3A3A3A] text-lg leading-6 space3 mb-6">
-            Благодаря оптимизации логистики мы сократили среднее время доставки
-            по городу до 3 часов.
-          </p>
-          <p class="text-[#3A3A3A99] space3">19 июня 2025</p>
-        </a>
-        <a
-          href="/pages/blog.html"
-          class="max-[1440px]:w-74.5 max-[1024px]:w-88 min-[1440px]:flex-1 shrink-0 max-[768px]:w-full max-[768px]:rounded-3xl"
-        >
-          <img
-            src="../assets/images/news3.png"
-            class="mb-4"
-            class="mb-4 max-[1440px]:object-cover max-[1440px]:w-74.5 max-[1024px]:w-88 max-[768px]:w-full max-[1440px]:h-87.5"
-          />
-          <p class="text-[#3A3A3A] font-medium text-2xl space3 leading-8 mb-2">
-            Новые стандарты упаковки
-          </p>
-          <p class="text-[#3A3A3A] text-lg leading-6 space3 mb-6">
-            Ввели усиленные правила упаковки грузов для повышения сохранности
-            при перевозке.
-          </p>
-          <p class="text-[#3A3A3A99] space3">5 июня 2025</p>
-        </a>
-        <a
-          href="/pages/blog.html"
-          class="max-[1440px]:74.5 max-[1024px]:w-88 min-[1440px]:flex-1 shrink-0 max-[768px]:w-full max-[768px]:rounded-3xl"
-        >
-          <img
-            src="../assets/images/news4.png"
-            class="mb-4"
-            class="mb-4 max-[1440px]:object-cover max-[1440px]:74.5 max-[1024px]:w-88 max-[768px]:w-full max-[1440px]:h-87.5"
-          />
-          <p class="text-[#3A3A3A] font-medium text-2xl space3 leading-8 mb-2">
-            Мы теперь в Telegram
-          </p>
-          <p class="text-[#3A3A3A] text-lg leading-6 space3 mb-6">
-            Подписывайтесь на наш Telegram-канал, чтобы первыми узнавать об
-            акциях, изменениях и новостях компании.
-          </p>
-          <p class="text-[#3A3A3A99] space3">1 июля 2025</p>
-        </a>
+        <!-- Новости будут добавлены через JS -->
       </div>
     </main>
     <footer
@@ -763,4 +632,5 @@
     </footer>
   </body>
   <script src="../js/main.js"></script>
+  <script src="../js/blog.js"></script>
 </html>
