--- a/pages/cargo_transportation.html
+++ b/pages/cargo_transportation.html
@@ -980,7 +980,7 @@
               >
                 <div class="about_icon_wrap">
                   <img
-                    src="./assets/icons/check.svg"
+                    src="../assets/icons/check.svg"
                     alt="check"
                     class="max-[1440px]:w-6 max-[1440px]:h-6 max-[768px]:w-3 max-[768px]:h-3"
                   />
@@ -1001,7 +1001,7 @@
               >
                 <div class="about_icon_wrap">
                   <img
-                    src="./assets/icons/location.svg"
+                    src="../assets/icons/location.svg"
                     alt="check"
                     class="max-[1440px]:w-6 max-[1440px]:h-6 max-[768px]:w-3 max-[768px]:h-3"
                   />
@@ -1022,7 +1022,7 @@
               >
                 <div class="about_icon_wrap">
                   <img
-                    src="./assets/icons/rubl.svg"
+                    src="../assets/icons/rubl.svg"
                     alt="check"
                     class="max-[1440px]:w-6 max-[1440px]:h-6 max-[768px]:w-3 max-[768px]:h-3"
                   />
@@ -1041,7 +1041,7 @@
               >
                 <div class="about_icon_wrap">
                   <img
-                    src="./assets/icons/clock.svg"
+                    src="../assets/icons/clock.svg"
                     alt="check"
                     class="max-[1440px]:w-6 max-[1440px]:h-6 max-[768px]:w-3 max-[768px]:h-3"
                   />
