--- a/pages/comments.html
+++ b/pages/comments.html
@@ -101,9 +101,11 @@
           href="tel:+7(383)230-56-76"
           >+7(383)230-56-76</a
         >
-        <div class="header_icon_wrap max-[768px]:hidden!">
-          <img src="../assets/icons/phone.svg" alt="phone" />
-        </div>
+        <a href="https://t.me/your_telegram">
+          <div class="header_icon_wrap max-[768px]:hidden!">
+            <img src="../assets/icons/telegram.svg" alt="phone" />
+          </div>
+        </a>
         <button
           class="bg-[#C83A36] h-12 w-41.5 rounded-xl text-white font-medium max-[768px]:hidden!"
         >
