--- a/pages/cargo_transportation.html
+++ b/pages/cargo_transportation.html
@@ -108,10 +108,12 @@
           href="tel:+7(383)230-56-76"
           >+7(383)230-56-76</a
         >
+        <a href="https://t.me/your_telegram">
+          <div class="header_icon_wrap max-[768px]:hidden!">
+            <img src="../assets/icons/telegram.svg" alt="phone" />
+          </div>
+        </a>
 
-        <div class="header_icon_wrap max-[768px]:hidden!">
-          <img src="../assets/icons/phone.svg" alt="phone" />
-        </div>
         <button
           class="bg-[#C83A36] h-12 w-41.5 rounded-xl text-white font-medium max-[768px]:hidden!"
         >
@@ -1789,7 +1791,7 @@
         </div>
         <div class="flex gap-6 max-[1440px]:overflow-auto">
           <a
-            href="/pages/pages/blog.html"
+            href="/pages/blog.html"
             class="max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
           >
             <img src="../assets/images/news1.png" class="mb-4" />
@@ -1805,7 +1807,7 @@
             <p class="text-[#3A3A3A99] space3">28 июня 2025</p>
           </a>
           <a
-            href="/pages/pages/blog.html"
+            href="/pages/blog.html"
             class="max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
           >
             <img
@@ -1825,7 +1827,7 @@
             <p class="text-[#3A3A3A99] space3">19 июня 2025</p>
           </a>
           <a
-            href="/pages/pages/blog.html"
+            href="/pages/blog.html"
             class="max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
           >
             <img
@@ -1845,7 +1847,7 @@
             <p class="text-[#3A3A3A99] space3">5 июня 2025</p>
           </a>
           <a
-            href="/pages/pages/pages/blog.html"
+            href="/pages/pages/blog.html"
             class="max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
           >
             <img
