--- a/pages/cargo_transportation.html
+++ b/pages/cargo_transportation.html
@@ -1847,7 +1847,7 @@
             <p class="text-[#3A3A3A99] space3">5 июня 2025</p>
           </a>
           <a
-            href="/pages/pages/blog.html"
+            href="/pages/blog.html"
             class="max-[1440px]:w-108 min-[1440px]:flex-1 shrink-0 max-[768px]:w-72 max-[768px]:rounded-3xl"
           >
             <img
