--- a/pages/road_transportation.html
+++ b/pages/road_transportation.html
@@ -14,7 +14,7 @@
   <body>
     <header
       id="header"
-      class="top-0 relative max-[768px]:ronded-xl max-[768px]:px-4 max-[768px]:py-3.5 mx-auto z-100 bg-[#3A3A3A] py-6 px-10 max-[1440px]:py-6 max-[1440px]:px-10 max w-full rounded-b-[25px] border-b border-b-[#FFFFFF33] flex justify-between items-center"
+      class="top-0 relative max-[768px]:ronded-xl max-[768px]:px-4 max-[768px]:py-3.5 mx-auto z-100 bg-[#3A3A3A] py-6 px-10 max-[1440px]:py-6 max-[1440px]:px-10 max-[1024px]:px-5 max w-full rounded-b-[25px] border-b border-b-[#FFFFFF33] flex justify-between items-center"
     >
       <div class="flex gap-6 items-center">
         <a href="/index.html">
@@ -298,7 +298,7 @@
       class="max-[1440px]:max-w-5xl mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-full"
     >
       <section
-        class="px-15 max-[1440px]:px-10 max-[768px]:px-4 mb-40 max-[1440px]:mb-20 max-[768px]:mb-16"
+        class="px-15 max-[1440px]:px-10 max-[1024px]:px-5 max-[768px]:px-4 mb-40 max-[1440px]:mb-20 max-[768px]:mb-16"
       >
         <h2 class="title mb-14 max-[1440px]:mb-10 max-[768px]:mb-6">
           Наш автопарк
@@ -501,7 +501,7 @@
         </div>
       </section>
       <section
-        class="px-15 max-[1440px]:px-10 max-[768px]:px-4 mb-40 max-[1440px]:mb-20 max-[768px]:mb-16"
+        class="px-15 max-[1440px]:px-10 max-[1024px]:px-5 max-[768px]:px-4 mb-40 max-[1440px]:mb-20 max-[768px]:mb-16"
       >
         <div class="flex mb-15.5 max-[768px]:flex-col max-[1440px]:mb-6">
           <div class="flex-1 max-[768px]:mb-4">
@@ -1064,7 +1064,7 @@
         </button>
       </section>
       <section
-        class="px-15 max-[1440px]:px-10 max-[768px]:px-4 mb-36 max-[1440px]:mb-10 max-[768px]:mb-16"
+        class="px-15 max-[1440px]:px-10 max-[1024px]:px-5 max-[768px]:px-4 mb-36 max-[1440px]:mb-10 max-[768px]:mb-16"
       >
         <h2 class="title mb-14 max-[768px]:mb-8">FAQ</h2>
         <div
@@ -1375,7 +1375,7 @@
       </section>
     </main>
     <footer
-      class="bg-[#3A3A3A] footer_section_mobile p-15 max-[768px]:px-4 max-[768px]:pb-5 max-[768px]:pt-10 pb-8 max-[1024px]:pb-36 rounded-t-[56px] max-[1024px]:px-5 relative max-[1440px]:rounded-t-3xl z-20 -mt-18 max-[1440px]:px-10 max-[1440px]:-mt-5 mx-auto footer_section"
+      class="bg-[#3A3A3A] footer_section_mobile p-15 max-[768px]:px-4 max-[768px]:pb-5 max-[768px]:pt-10 pb-8 max-[1024px]:pb-36 rounded-t-[56px] max-[1024px]:px-5 relative max-[1440px]:rounded-t-3xl z-20 -mt-18 max-[1440px]:px-10 max-[1024px]:px-5 max-[1440px]:-mt-5 mx-auto footer_section"
     >
       <div
         class="flex items-center justify-between mb-19.5 z-2000 max-[768px]:mb-8 relative max-[768px]:flex-col max-[768px]:gap-8 max-[768px]:items-start"
