--- a/pages/blog.html
+++ b/pages/blog.html
@@ -273,7 +273,7 @@
       </div>
     </header>
     <main
-      class="max-w-[1920px] max-[1440px]:max-w-5xl mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-full px-15 py-30 max-[1440px]:px-5 max-[1440px]:py-25 max-[768px]:px-4 max-[768px]:py-10"
+      class="max-w-[1920px] mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-full px-15 py-30 max-[1440px]:px-5 max-[1440px]:py-25 max-[768px]:px-4 max-[768px]:py-10"
     >
       <div class="flex gap-47 relative">
         <div class="max-[1440px]:hidden">
@@ -330,7 +330,7 @@
           <img
             src="../assets/images/blogTablet.png"
             alt="blog"
-            class="max-[1440px]:block hidden max-[1024px]:hidden mb-12"
+            class="max-[1440px]:block hidden w-full max-[1024px]:hidden mb-12"
           />
           <img
             src="../assets/images/blogTablet2.png"
@@ -448,7 +448,7 @@
           <img
             src="../assets/images/blogTablet.png"
             alt="blog"
-            class="max-[1440px]:block hidden max-[1024px]:hidden mb-12"
+            class="max-[1440px]:block hidden w-full max-[1024px]:hidden mb-12"
           />
           <img
             src="../assets/images/blogTablet2.png"
