--- a/pages/comments.html
+++ b/pages/comments.html
@@ -294,9 +294,7 @@
         class="absolute right-0 max-[1440px]:w-120 max-[1440px]:h-90 -top-20 max-[1440px]:-top-9 max-[1024px]:w-110 max-[1024px]:h-80 max-[1440px]:-right-2 max-[1024px]:top-1.5 max-[1024px]:-right-7 max-[768px]:w-60 max-[768px]:h-50 max-[768px]:hidden max-[768px]:top-20"
       />
     </div>
-    <main
-      class="max-[1440px]:max-w-5xl mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-full"
-    >
+    <main class="mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-full">
       <section
         class="mb-40 max-[1440px]:mb-20 max-[1024px]:mb-16 px-15 max-[1440px]:px-10 max-[1024px]:px-5"
       >
