--- a/pages/road_transportation.html
+++ b/pages/road_transportation.html
@@ -294,9 +294,7 @@
         class="absolute right-0 -top-16 max-[1440px]:-top-46 max-[1440px]:-right-48 max-[1024px]:-top-34 max-[1024px]:-right-55 max-[768px]:w-50 max-[768px]:h-35 max-[768px]:-right-17 max-[768px]:top-33"
       />
     </div>
-    <main
-      class="max-[1440px]:max-w-5xl mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-full"
-    >
+    <main class="mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-full">
       <section
         class="px-15 max-[1440px]:px-10 max-[1024px]:px-5 max-[768px]:px-4 mb-40 max-[1440px]:mb-20 max-[768px]:mb-16"
       >
@@ -399,7 +397,7 @@
         </div>
         <div class="flex gap-3 overflow-auto max-[1440px]:gap-2">
           <div
-            class="bg-[#E8EBED] truck-card active radius_left py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] max-[1440px]:w-[182px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
+            class="bg-[#E8EBED] truck-card active radius_left min-[1024px]:flex-1 py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] max-[1440px]:w-[182px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
             data-title="Фура “Тент” 10 тонн"
             data-img="../assets/images/tent.png"
             data-length="13.6 м"
@@ -419,7 +417,7 @@
             </p>
           </div>
           <div
-            class="bg-[#F2F5F7] truck-card radius_full py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[182px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
+            class="bg-[#F2F5F7] truck-card radius_full min-[1024px]:flex-1 py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[182px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
             data-title="Фура “Реф” 10 тонн"
             data-img="../assets/images/ref.png"
             data-length="13.2 м"
@@ -439,7 +437,7 @@
             </p>
           </div>
           <div
-            class="bg-[#F2F5F7] truck-card radius_full py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[182px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
+            class="bg-[#F2F5F7] truck-card radius_full min-[1024px]:flex-1 py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[182px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
             data-title=" Фура “Реф” 10 тонн"
             data-img="../assets/images/ref.png"
             data-length="15.2 м"
@@ -459,7 +457,7 @@
             </p>
           </div>
           <div
-            class="bg-[#F2F5F7] truck-card radius_full py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[182px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
+            class="bg-[#F2F5F7] truck-card radius_full min-[1024px]:flex-1 py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[182px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
             data-title=" Фура “Реф” 10 тонн"
             data-img="../assets/images/ref.png"
             data-length="15.2 м"
@@ -479,7 +477,7 @@
             </p>
           </div>
           <div
-            class="bg-[#F2F5F7] truck-card radius_right py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[182px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
+            class="bg-[#F2F5F7] truck-card radius_right min-[1024px]:flex-1 py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[182px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
             data-title="Фура Реф 10 тонн"
             data-img="../assets/images/bort.png"
             data-length="12.2 м"
