--- a/index.html
+++ b/index.html
@@ -280,7 +280,12 @@
           <img
             src="./assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-[1440px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-[1920px]:hidden"
+          />
+          <img
+            src="./assets/images/mainDesktop.png"
+            alt="main"
+            class="w-full rounded-b-[3.5rem] hidden max-[1920px]:block max-[1440px]:hidden"
           />
           <img
             src="./assets/images/mainTablet.png"
@@ -297,7 +302,12 @@
           <img
             src="./assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-[1440px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-[1920px]:hidden"
+          />
+          <img
+            src="./assets/images/mainDesktop.png"
+            alt="main"
+            class="w-full rounded-b-[3.5rem] hidden max-[1920px]:block max-[1440px]:hidden"
           />
           <img
             src="./assets/images/mainTablet.png"
@@ -314,7 +324,12 @@
           <img
             src="./assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-[1440px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-[1920px]:hidden"
+          />
+          <img
+            src="./assets/images/mainDesktop.png"
+            alt="main"
+            class="w-full rounded-b-[3.5rem] hidden max-[1920px]:block max-[1440px]:hidden"
           />
           <img
             src="./assets/images/mainTablet.png"
@@ -331,7 +346,12 @@
           <img
             src="./assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-[1440px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-[1920px]:hidden"
+          />
+          <img
+            src="./assets/images/mainDesktop.png"
+            alt="main"
+            class="w-full rounded-b-[3.5rem] hidden max-[1920px]:block max-[1440px]:hidden"
           />
           <img
             src="./assets/images/mainTablet.png"
@@ -348,7 +368,12 @@
           <img
             src="./assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-[1440px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-[1920px]:hidden"
+          />
+          <img
+            src="./assets/images/mainDesktop.png"
+            alt="main"
+            class="w-full rounded-b-[3.5rem] hidden max-[1920px]:block max-[1440px]:hidden"
           />
           <img
             src="./assets/images/mainTablet.png"
@@ -365,7 +390,12 @@
           <img
             src="./assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-[1440px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-[1920px]:hidden"
+          />
+          <img
+            src="./assets/images/mainDesktop.png"
+            alt="main"
+            class="w-full rounded-b-[3.5rem] hidden max-[1920px]:block max-[1440px]:hidden"
           />
           <img
             src="./assets/images/mainTablet.png"
@@ -409,7 +439,7 @@
           </a>
         </div>
         <div
-          class="w-[722px] max-[1920px]:max-h-[85%] max-[1440px]:max-h-[auto] overflow-auto bg-white p-8 rounded-3xl max-[1440px]:w-[504px] max-[1024px]:w-[728px] max-[1024px]:p-6 max-[768px]:hidden"
+          class="w-[722px] max-[1920px]:max-h-[88%] max-[1440px]:max-h-[auto] overflow-auto bg-white p-8 rounded-3xl max-[1440px]:w-[504px] max-[1024px]:w-[728px] max-[1024px]:p-6 max-[768px]:hidden"
         >
           <h2
             class="text-[#3A3A3A] font-medium leading-[100%] space3 text-[2rem] mb-6"
@@ -592,7 +622,7 @@
       </div>
     </div>
     <main
-      class="page-container max-w-[1920px] max-[1440px]:max-w-5xl mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-full"
+      class="page-container max-w-[1920px] max-[1440px]:max-w-full mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-full"
     >
       <div class="mt-16 mb-10 px-4 max-[768px]:block hidden">
         <h2
@@ -893,7 +923,7 @@
           <img
             src="./assets/images/about_company.png"
             alt="about"
-            class="h-185 object-cover w-full max-[1920px]:h-160 max-[1440px]:w-125.5 max-[1440px]:h-110 max-[1025px]:mt-11 max-[768px]:w-full max-[768px]:h-82 max-[768px]:rounded-3xl! max-[768px]:mt-0 max-[1440px]:mt-11 rounded-l-4xl max-[1024px]:mt-13 max-[1024px]:rounded-l-3xl max-[1024px]:h-102.5 max-[1024px]:full"
+            class="h-185 object-cover w-full max-[1920px]:h-160 max-[1440px]:w-full max-[1440px]:h-108 max-[1025px]:mt-11 max-[768px]:w-full max-[768px]:h-82 max-[768px]:rounded-3xl! max-[768px]:mt-0 max-[1440px]:mt-11 rounded-l-4xl max-[1024px]:mt-13 max-[1024px]:rounded-l-3xl max-[1024px]:h-102.5 max-[1024px]:full"
           />
         </div>
       </section>
