--- a/pages/cargo_transportation.html
+++ b/pages/cargo_transportation.html
@@ -285,7 +285,12 @@
           <img
             src="../assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-[1440px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-[1920px]:hidden"
+          />
+          <img
+            src="../assets/images/mainDesktop.png"
+            alt="main"
+            class="w-full rounded-b-[3.5rem] max-[1920px]:block hidden max-[1440px]:hidden"
           />
           <img
             src="../assets/images/mainTablet.png"
@@ -302,7 +307,12 @@
           <img
             src="../assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-[1440px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-[1920px]:hidden"
+          />
+          <img
+            src="../assets/images/mainDesktop.png"
+            alt="main"
+            class="w-full rounded-b-[3.5rem] max-[1920px]:block hidden max-[1440px]:hidden"
           />
           <img
             src="../assets/images/mainTablet.png"
@@ -319,7 +329,12 @@
           <img
             src="../assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-[1440px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-[1920px]:hidden"
+          />
+          <img
+            src="../assets/images/mainDesktop.png"
+            alt="main"
+            class="w-full rounded-b-[3.5rem] max-[1920px]:block hidden max-[1440px]:hidden"
           />
           <img
             src="../assets/images/mainTablet.png"
@@ -336,7 +351,12 @@
           <img
             src="../assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-[1440px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-[1920px]:hidden"
+          />
+          <img
+            src="../assets/images/mainDesktop.png"
+            alt="main"
+            class="w-full rounded-b-[3.5rem] max-[1920px]:block hidden max-[1440px]:hidden"
           />
           <img
             src="../assets/images/mainTablet.png"
@@ -353,7 +373,12 @@
           <img
             src="../assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-[1440px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-[1920px]:hidden"
+          />
+          <img
+            src="../assets/images/mainDesktop.png"
+            alt="main"
+            class="w-full rounded-b-[3.5rem] max-[1920px]:block hidden max-[1440px]:hidden"
           />
           <img
             src="../assets/images/mainTablet.png"
@@ -370,7 +395,12 @@
           <img
             src="../assets/images/mainShort.png"
             alt="main"
-            class="w-full rounded-b-[3.5rem] max-[1440px]:hidden"
+            class="w-full rounded-b-[3.5rem] max-[1920px]:hidden"
+          />
+          <img
+            src="../assets/images/mainDesktop.png"
+            alt="main"
+            class="w-full rounded-b-[3.5rem] max-[1920px]:block hidden max-[1440px]:hidden"
           />
           <img
             src="../assets/images/mainTablet.png"
@@ -414,7 +444,7 @@
           </button>
         </div>
         <div
-          class="w-[722px] max-[1920px]:max-h-[85%] max-[1440px]:max-h-[auto] overflow-auto bg-white p-8 rounded-3xl max-[1440px]:w-[504px] max-[1024px]:w-[728px] max-[1024px]:p-6 max-[768px]:hidden"
+          class="w-[722px] max-[1920px]:max-h-[88%] max-[1440px]:max-h-[auto] overflow-auto bg-white p-8 rounded-3xl max-[1440px]:w-[504px] max-[1024px]:w-[728px] max-[1024px]:p-6 max-[768px]:hidden"
         >
           <h2
             class="text-[#3A3A3A] font-medium leading-[100%] space3 text-[2rem] mb-6"
@@ -596,9 +626,7 @@
         </div>
       </div>
     </div>
-    <main
-      class="max-[1440px]:max-w-5xl mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-full"
-    >
+    <main class="mx-auto max-[1024px]:max-w-3xl max-[768px]:max-w-full">
       <div class="mt-16 mb-10 px-4 max-[768px]:block hidden">
         <h2
           class="text-[#3A3A3A] font-medium leading-[100%] space3 mb-4 text-2xl"
@@ -854,7 +882,7 @@
         </div>
         <div class="flex gap-3 overflow-auto max-[1440px]:gap-2">
           <div
-            class="bg-[#E8EBED] truck-card active radius_left py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] max-[1440px]:w-[182px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
+            class="bg-[#E8EBED] truck-card min-[1024px]:flex-1 active radius_left py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] max-[1440px]:w-[182px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
             data-title="Фура “Тент” 10 тонн"
             data-img="../assets/images/tent.png"
             data-length="13.6 м"
@@ -874,7 +902,7 @@
             </p>
           </div>
           <div
-            class="bg-[#F2F5F7] truck-card radius_full py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[182px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
+            class="bg-[#F2F5F7] truck-card radius_full min-[1024px]:flex-1 py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[182px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
             data-title="Фура “Реф” 10 тонн"
             data-img="../assets/images/ref.png"
             data-length="13.2 м"
@@ -894,7 +922,7 @@
             </p>
           </div>
           <div
-            class="bg-[#F2F5F7] truck-card radius_full py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[182px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
+            class="bg-[#F2F5F7] truck-card radius_full min-[1024px]:flex-1 py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[182px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
             data-title=" Фура “Реф” 10 тонн"
             data-img="../assets/images/ref.png"
             data-length="15.2 м"
@@ -914,7 +942,7 @@
             </p>
           </div>
           <div
-            class="bg-[#F2F5F7] truck-card radius_full py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[182px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
+            class="bg-[#F2F5F7] truck-card radius_full min-[1024px]:flex-1 py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[182px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
             data-title=" Фура “Реф” 10 тонн"
             data-img="../assets/images/ref.png"
             data-length="15.2 м"
@@ -934,7 +962,7 @@
             </p>
           </div>
           <div
-            class="bg-[#F2F5F7] truck-card radius_right py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[182px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
+            class="bg-[#F2F5F7] truck-card radius_right min-[1024px]:flex-1 py-8 max-[1440px]:py-6 max-[1024px]:py-4 shrink-0 min-[1920px]:flex-1 max-[1920px]:w-[350px] w-[350px] max-[1440px]:w-[182px] max-[1024px]:w-[138px] flex flex-col items-center gap-16.5 max-[1440px]:gap-2"
             data-title="Фура Реф 10 тонн"
             data-img="../assets/images/bort.png"
             data-length="12.2 м"
@@ -1089,7 +1117,7 @@
           <img
             src="../assets/images/about_company.png"
             alt="about"
-            class="h-185 object-cover w-full max-[1920px]:h-160 max-[1440px]:w-125.5 max-[1440px]:h-110 max-[1025px]:mt-11 max-[768px]:w-full max-[768px]:h-82 max-[768px]:rounded-3xl! max-[768px]:mt-0 max-[1440px]:mt-11 rounded-l-4xl max-[1024px]:mt-14 max-[1024px]:rounded-l-3xl max-[1024px]:h-102.5 max-[1024px]:w-81"
+            class="h-185 object-cover w-full max-[1920px]:h-160 max-[1440px]:w-full max-[1440px]:h-108 max-[1025px]:mt-11 max-[768px]:w-full max-[768px]:h-82 max-[768px]:rounded-3xl! max-[768px]:mt-0 max-[1440px]:mt-10 rounded-l-4xl max-[1024px]:mt-14 max-[1024px]:rounded-l-3xl max-[1024px]:h-102.5 max-[1024px]:w-81"
           />
         </div>
       </section>
